HSEARCH-2701 Allow reflection to all-unnamed modules for JDK9 integration testing