@@ -1471,7 +1471,7 @@ org.jboss.logging.BasicLogger#debugf(java.lang.Throwable, java.lang.String, long
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <additionalRuntimeArgLine>--add-modules java.xml.bind</additionalRuntimeArgLine>
+                <additionalRuntimeArgLine>--add-modules java.xml.bind --add-opens=java.base/java.lang=ALL-UNNAMED</additionalRuntimeArgLine>
             </properties>
         </profile>
 
